WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107002
GraphicsSurfaceGLX is leaking an XWindow
https://bugs.webkit.org/show_bug.cgi?id=107002
Summary
GraphicsSurfaceGLX is leaking an XWindow
Zeno Albisser
Reported
2013-01-16 03:59:59 PST
GraphicsSurfaceGLX is leaking an XWindow
Attachments
Patch
(1.49 KB, patch)
2013-01-16 04:02 PST
,
Zeno Albisser
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zeno Albisser
Comment 1
2013-01-16 04:02:23 PST
Created
attachment 182955
[details]
Patch
Zeno Albisser
Comment 2
2013-01-16 04:15:10 PST
Comment on
attachment 182955
[details]
Patch Clearing flags on attachment: 182955 Committed
r139870
: <
http://trac.webkit.org/changeset/139870
>
Zeno Albisser
Comment 3
2013-01-16 04:15:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug