GraphicsSurfaceGLX is leaking an XWindow https://bugs.webkit.org/show_bug.cgi?id=107002

The XWindow created as a backing surface for
the GraphicsSurfaceGLX needs to be destroyed
together with the GraphicsSurface.

Reviewed by Noam Rosenthal.

* platform/graphics/surfaces/glx/GraphicsSurfaceGLX.cpp:
(WebCore::GraphicsSurfacePrivate::clear):

Canonical link: https://commits.webkit.org/125251@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139870 268f45cc-cd09-0410-ab3c-d52691b4dbfc